--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         "dealerdirect/phpcodesniffer-composer-installer": "^0.6.2 || ^0.7",
         "slevomat/coding-standard": "^6.2.0",
         "squizlabs/php_codesniffer": "^3.5.3",
-        "webimpress/coding-standard": "^1.1.5",
-        "nunomaduro/phpinsights": "^1.14"
+        "webimpress/coding-standard": "^1.1.5"
     },
     "autoload": {
         "psr-4": {
